2000-05-11  Jason Merrill  <jason@casey.cygnus.com>

	* fixinc/fixincl.c (run_compiles): Don't crash on null pz_machine.

2000-05-11  Zack Weinberg  <zack@wolery.cumb.org>

	* fixinc/fixfixes.c, fixinc/fixtests.c: Update commentary.

Thu May 11 22:28:05 2000  Denis Chertykov  <denisc@overta.ru>

	* config/avr/avr-protos.c (jump_over_one_insn_p): New declaration.
	* config/avr/avr.c (jump_over_one_insn_p): New function.
	* config/avr/avr.md: New peepholes added. Output test and
	conditional jump to "sbrc" or "sbrs" command.

2000-05-11  Mark Elbrecht  <snowball3@bigfoot.com>

	* cppmain.c (main): Use IS_DIR_SEPARATOR.

2000-05-11  Jakub Jelinek  <jakub@redhat.com>

	* except.c (find_exception_handler_labels_1): New function.
	(find_exception_handler_labels): Split into two functions, dive
	into CALL_PLACEHOLDERs when looking for exception handler labels.

2000-05-11 Stan Cox <scox@cygnus.com>

	* regrename.c (replace_reg_in_block): Improve REG_DEAD handling.
	* timevar.def (TV_RENAME_REGISTERS): Move before TV_SCHED2.
	* toplev.c (rest_of_compilation): Call regrename_optimize before sched2.

2000-05-11  Bruce Korb  <bkorb@gnu.org>

	* fixinc/fixfixes.c (double_slash_fix):  obsolete
	(else_endif_label_fix): obsolete
	(format_fix):  new, unused as yet
	(main): obsolete
	* fixinc/fixlib.h: added fix description struct for use by format_fix
	* fixinc/fixincl.c: removed the struct & test for SIGIOT befure using
	* fixinc/Makefile.in:  compile fixfixes.c and fixtests.c as separate
	modules.  Removed the vestiges of the script version.
	Added support for "make check".
	* fixinc/check.diff: base diff file (needs work!!)
	* fixinc/check.tpl: quiet the fixup output
	* fixinc/fixtests.c (main): obsolete
	* fixinc/fixincl.sh:  don't bother copying fixincl to ..
	* fixinc/fixincl.tpl:  provide for arguments to c_fix routines

Thu May 11 11:57:02 MET DST 2000  Jan Hubicka <jh@suse.cz>

	* toplev.c (rest_of_compilation): Remove dead code after
	combine.
